force-app/main/default/objects/Mst_Assess_Users__c/Mst_Assess_Users__c.object-meta.xml
<CustomObject>
    <description>査定アプリユーザ管理用オブジェクト（正社員および業者）</description>
    <label>査定ユーザ</label>
    <nameField>
        <label>査定ユーザ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>