force-app/main/default/objects/Mst_Assess_Users__c/fields/community_user__c.field-meta.xml
<CustomField>
    <fullName>community_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コミュニティユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>assess_users_from_user</relationshipName>
    <type>Lookup</type>
</CustomField>