force-app/main/default/objects/Mst_Assess_Users__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>査定ユーザ (取引先担当者)</relationshipLabel>
    <relationshipName>Mst_Assess_Users</relationshipName>
    <type>Lookup</type>
</CustomField>