force-app/main/default/objects/Mst_Assess_Users__c/fields/emp_kind__c.field-meta.xml
<CustomField>
    <fullName>emp_kind__c</fullName>
    <label>社員区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>営業ユーザ</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ヤードユーザ</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>取引先</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>提携業者様</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>外部ユーザ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>