force-app/main/default/objects/Mst_Assess_Users__c/fields/first_login_date__c.field-meta.xml
<CustomField>
    <fullName>first_login_date__c</fullName>
    <label>アプリ初回ログイン日時</label>
    <type>DateTime</type>
</CustomField>