force-app/main/default/objects/Mst_Assess_Users__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>無効</label>
    <type>Checkbox</type>
</CustomField>