force-app/main/default/objects/Mst_Assess_Users__c/fields/last_login_date__c.field-meta.xml
<CustomField>
    <fullName>last_login_date__c</fullName>
    <label>アプリ最終ログイン日時</label>
    <type>DateTime</type>
</CustomField>