force-app/main/default/objects/Mst_Assess_Users__c/fields/login_user__c.field-meta.xml
<CustomField>
    <fullName>login_user__c</fullName>
    <externalId>true</externalId>
    <label>ログインID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>