force-app/main/default/objects/Mst_Assess_Users__c/fields/manage_org__c.field-meta.xml
<CustomField>
    <fullName>manage_org__c</fullName>
    <label>統括部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>札幌支店</fullName>
            </value>
            <value>
                <fullName>盛岡支店</fullName>
            </value>
            <value>
                <fullName>仙台支店</fullName>
            </value>
            <value>
                <fullName>水戸支店</fullName>
            </value>
            <value>
                <fullName>群馬支店</fullName>
            </value>
            <value>
                <fullName>千葉支店</fullName>
            </value>
            <value>
                <fullName>東京支店</fullName>
            </value>
            <value>
                <fullName>埼玉支店</fullName>
            </value>
            <value>
                <fullName>横浜支店</fullName>
            </value>
            <value>
                <fullName>新潟支店</fullName>
            </value>
            <value>
                <fullName>長野支店</fullName>
            </value>
            <value>
                <fullName>岐阜支店</fullName>
            </value>
            <value>
                <fullName>静岡支店</fullName>
            </value>
            <value>
                <fullName>名古屋支店</fullName>
            </value>
            <value>
                <fullName>金沢支店</fullName>
            </value>
            <value>
                <fullName>京都支店</fullName>
            </value>
            <value>
                <fullName>大阪支店</fullName>
            </value>
            <value>
                <fullName>兵庫支店</fullName>
            </value>
            <value>
                <fullName>高松支店</fullName>
            </value>
            <value>
                <fullName>広島支店</fullName>
            </value>
            <value>
                <fullName>鳥取支店</fullName>
            </value>
            <value>
                <fullName>山口</fullName>
            </value>
            <value>
                <fullName>福岡支店</fullName>
            </value>
            <value>
                <fullName>熊本支店</fullName>
            </value>
            <value>
                <fullName>鹿児島支店</fullName>
            </value>
            <value>
                <fullName>沖縄支店</fullName>
            </value>
            <value>
                <fullName>リテール事業部</fullName>
            </value>
            <value>
                <fullName>大阪本社</fullName>
            </value>
            <value>
                <fullName>Cコネクト課</fullName>
            </value>
            <value>
                <fullName>セレクト岸和田</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>