force-app/main/default/objects/Mst_Assess_Users__c/fields/pass__c.field-meta.xml
<CustomField>
    <fullName>pass__c</fullName>
    <label>パスワード</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>