force-app/main/default/objects/Mst_Assess_Users__c/fields/sinjin_flg__c.field-meta.xml
<CustomField>
    <fullName>sinjin_flg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新人フラグ</label>
    <type>Checkbox</type>
</CustomField>