force-app/main/default/objects/Mst_Assess_Users__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>manage_org__c</columns>
    <columns>login_user__c</columns>
    <columns>pass__c</columns>
    <columns>emp_kind__c</columns>
    <columns>sinjin_flg__c</columns>
    <columns>first_login_date__c</columns>
    <columns>last_login_date__c</columns>
    <columns>assess_user_type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>