force-app/main/default/objects/Mst_Assess_Users__c/listViews/branch_user.listView-meta.xml
<ListView>
    <fullName>branch_user</fullName>
    <columns>NAME</columns>
    <columns>manage_org__c</columns>
    <columns>login_user__c</columns>
    <columns>pass__c</columns>
    <columns>emp_kind__c</columns>
    <columns>sinjin_flg__c</columns>
    <columns>first_login_date__c</columns>
    <columns>last_login_date__c</columns>
    <columns>assess_user_type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>emp_kind__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pass__c</field>
        <operation>notEqual</operation>
        <value>taishoku</value>
    </filters>
    <label>営業ユーザ</label>
</ListView>