force-app/main/default/objects/Mst_Assess_Users__c/listViews/CustomrUser.listView-meta.xml
<ListView>
    <fullName>CustomrUser</fullName>
    <columns>NAME</columns>
    <columns>manage_org__c</columns>
    <columns>login_user__c</columns>
    <columns>emp_kind__c</columns>
    <columns>sinjin_flg__c</columns>
    <columns>first_login_date__c</columns>
    <columns>last_login_date__c</columns>
    <columns>assess_user_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>emp_kind__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>取引先ユーザ（ALL）</label>
</ListView>