force-app/main/default/objects/Mst_Assess_Users__c/listViews/Yard_user.listView-meta.xml
<ListView>
    <fullName>Yard_user</fullName>
    <columns>NAME</columns>
    <columns>manage_org__c</columns>
    <columns>login_user__c</columns>
    <columns>pass__c</columns>
    <columns>emp_kind__c</columns>
    <columns>sinjin_flg__c</columns>
    <columns>first_login_date__c</columns>
    <columns>last_login_date__c</columns>
    <columns>assess_user_type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>emp_kind__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>ヤードユーザ</label>
</ListView>